infrastructure/k8s/pgbouncer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgbouncer
  namespace: data
  labels:
    app: pgbouncer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgbouncer
  template:
    metadata:
      labels:
        app: pgbouncer
    spec:
      containers:
        - name: pgbouncer
          image: edoburu/pgbouncer:latest
          ports:
            - containerPort: 6432
          volumeMounts:
            - name: config
              mountPath: /etc/pgbouncer/pgbouncer.ini
              subPath: pgbouncer.ini
              readOnly: true
            - name: userlist
              mountPath: /etc/pgbouncer/userlist.txt
              subPath: userlist.txt
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: pgbouncer-config
        - name: userlist
          secret:
            secretName: pgbouncer-userlist
---
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer
  namespace: data
spec:
  selector:
    app: pgbouncer
  ports:
    - protocol: TCP
      port: 6432
      targetPort: 6432
  type: ClusterIP
